reference/5.1/Microsoft.PowerShell.Management/Remove-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/remove-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Remove-ItemProperty
ms.openlocfilehash: 9ae9c0e7c17a6a63da5487cce138ddce129b975b
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 07/07/2020
ms.locfileid: "93265478"
---
# <span data-ttu-id="cbf80-103">Remove-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-103">Remove-ItemProperty</span></span>

## <span data-ttu-id="cbf80-104">SAMMANFATTNING</span><span class="sxs-lookup"><span data-stu-id="cbf80-104">SYNOPSIS</span></span>
<span data-ttu-id="cbf80-105">Tar bort egenskapen och dess värde från ett objekt.</span><span class="sxs-lookup"><span data-stu-id="cbf80-105">Deletes the property and its value from an item.</span></span>

## <span data-ttu-id="cbf80-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="cbf80-106">SYNTAX</span></span>

### <span data-ttu-id="cbf80-107">Sökväg (standard)</span><span class="sxs-lookup"><span data-stu-id="cbf80-107">Path (Default)</span></span>

```
Remove-ItemProperty [-Path] <String[]> [-Name] <String[]> [-Force] [-Filter <String>] [-Include <String[]>]
 [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf] [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="cbf80-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="cbf80-108">LiteralPath</span></span>

```
Remove-ItemProperty -LiteralPath <String[]> [-Name] <String[]> [-Force] [-Filter <String>]
 [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf] [-Confirm]
 [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="cbf80-109">BESKRIVNING</span><span class="sxs-lookup"><span data-stu-id="cbf80-109">DESCRIPTION</span></span>

<span data-ttu-id="cbf80-110">`Remove-ItemProperty`Cmdleten tar bort en egenskap och dess värde från ett objekt.</span><span class="sxs-lookup"><span data-stu-id="cbf80-110">The `Remove-ItemProperty` cmdlet deletes a property and its value from an item.</span></span>
<span data-ttu-id="cbf80-111">Du kan använda den för att ta bort register värden och de data som de lagrar.</span><span class="sxs-lookup"><span data-stu-id="cbf80-111">You can use it to delete registry values and the data that they store.</span></span>

## <span data-ttu-id="cbf80-112">EXEMPEL</span><span class="sxs-lookup"><span data-stu-id="cbf80-112">EXAMPLES</span></span>

### <span data-ttu-id="cbf80-113">Exempel 1: ta bort ett register värde</span><span class="sxs-lookup"><span data-stu-id="cbf80-113">Example 1: Delete a registry value</span></span>

<span data-ttu-id="cbf80-114">Det här kommandot tar bort registervärdet "SmpProperty" och dess data från under nyckeln "SmpApplication" för register nyckeln "HKEY_LOCAL_MACHINE\Software".</span><span class="sxs-lookup"><span data-stu-id="cbf80-114">This command deletes the "SmpProperty" registry value, and its data, from the "SmpApplication" subkey of the "HKEY_LOCAL_MACHINE\Software" registry key.</span></span>

<span data-ttu-id="cbf80-115">Eftersom kommandot utfärdas från en fil system enhet ( `PS C:\>` ), innehåller det den fullständigt kvalificerade sökvägen till "SmpApplication"-under nyckeln, inklusive enheten, `HKLM:` och nyckeln "Software".</span><span class="sxs-lookup"><span data-stu-id="cbf80-115">Because the command is issued from a file system drive (`PS C:\>`), it includes the fully qualified path of the "SmpApplication" subkey, including the drive, `HKLM:`, and the "Software" key.</span></span>

<span data-ttu-id="cbf80-116">Parametern **Name** används för att identifiera det register värde som tas bort.</span><span class="sxs-lookup"><span data-stu-id="cbf80-116">It uses the **Name** parameter to identify the registry value that is being deleted.</span></span>

```powershell
Remove-ItemProperty -Path "HKLM:\Software\SmpApplication" -Name "SmpProperty"
```

### <span data-ttu-id="cbf80-117">Exempel 2: ta bort ett register värde från HKCU-platsen</span><span class="sxs-lookup"><span data-stu-id="cbf80-117">Example 2: Delete a registry value from the HKCU location</span></span>

<span data-ttu-id="cbf80-118">De här kommandona tar bort registervärdet "Options" och dess data från under nyckeln "mitt" i "HKEY_CURRENT_USER\Software\MyCompany".</span><span class="sxs-lookup"><span data-stu-id="cbf80-118">These commands delete the "Options" registry value, and its data, from the "MyApp" subkey of "HKEY_CURRENT_USER\Software\MyCompany".</span></span>

<span data-ttu-id="cbf80-119">Det första kommandot använder `Set-Location` cmdleten för att ändra den aktuella platsen till **HKEY_CURRENT_USER** enhet ( `HKCU:` ) och under nyckeln "Software\MyCompany\MyApp".</span><span class="sxs-lookup"><span data-stu-id="cbf80-119">The first command uses the `Set-Location` cmdlet to change the current location to the **HKEY_CURRENT_USER** drive (`HKCU:`) and the "Software\MyCompany\MyApp" subkey.</span></span>

<span data-ttu-id="cbf80-120">Det andra kommandot använder `Remove-ItemProperty` för att ta bort register värden för "alternativ" och dess data från under nyckeln "mitt".</span><span class="sxs-lookup"><span data-stu-id="cbf80-120">The second command uses `Remove-ItemProperty` to remove the "Options" registry value, and its data, from the "MyApp" subkey.</span></span>
<span data-ttu-id="cbf80-121">Eftersom **sökvägen** är obligatorisk använder kommandot en punkt (".") för att ange den aktuella platsen.</span><span class="sxs-lookup"><span data-stu-id="cbf80-121">Because **Path** is required, the command uses a dot ('.') to indicate the current location.</span></span>
<span data-ttu-id="cbf80-122">**Namnet** används för att ange vilket register värde som ska tas bort.</span><span class="sxs-lookup"><span data-stu-id="cbf80-122">It uses **Name** to specify which registry value to delete.</span></span>
<span data-ttu-id="cbf80-123">Parametern **Confirm** används för att begära en användar fråga innan värdet tas bort.</span><span class="sxs-lookup"><span data-stu-id="cbf80-123">It uses the **Confirm** parameter to request a user prompt before deleting the value.</span></span>

```
PS C:\> Set-Location HKCU:\Software\MyCompany\MyApp
PS HKCU:\Software\MyCompany\MyApp> Remove-ItemProperty -Path . -Name "Options" -Confirm
```

### <span data-ttu-id="cbf80-124">Exempel 3: ta bort ett register värde med hjälp av pipelinen</span><span class="sxs-lookup"><span data-stu-id="cbf80-124">Example 3: Remove a registry value by using the pipeline</span></span>

<span data-ttu-id="cbf80-125">Det här kommandot tar bort registervärdet "NoOfEmployees" och dess data från register nyckeln "HKLM\Software\MyCompany".</span><span class="sxs-lookup"><span data-stu-id="cbf80-125">This command deletes the "NoOfEmployees" registry value, and its data, from the "HKLM\Software\MyCompany" registry key.</span></span>

<span data-ttu-id="cbf80-126">Kommandot använder `Get-Item` cmdleten för att hämta ett objekt som representerar register nyckeln.</span><span class="sxs-lookup"><span data-stu-id="cbf80-126">The command uses the `Get-Item` cmdlet to get an item that represents the registry key.</span></span>
<span data-ttu-id="cbf80-127">En pipeline-operator () används `|` för att skicka objektet till `Remove-ItemProperty` .</span><span class="sxs-lookup"><span data-stu-id="cbf80-127">It uses a pipeline operator (`|`) to send the object to `Remove-ItemProperty`.</span></span>
<span data-ttu-id="cbf80-128">Sedan använder den **Name** -parametern för `Remove-ItemProperty` att ange namnet på registervärdet.</span><span class="sxs-lookup"><span data-stu-id="cbf80-128">Then, it uses the **Name** parameter of `Remove-ItemProperty` to specify the name of the registry value.</span></span>

```powershell
Get-Item -Path HKLM:\Software\MyCompany | Remove-ItemProperty -Name NoOfEmployees
```

## <span data-ttu-id="cbf80-129">PARAMETRAR</span><span class="sxs-lookup"><span data-stu-id="cbf80-129">PARAMETERS</span></span>

### <span data-ttu-id="cbf80-130">-Credential</span><span class="sxs-lookup"><span data-stu-id="cbf80-130">-Credential</span></span>

> [!NOTE]
> <span data-ttu-id="cbf80-131">Den här parametern stöds inte av några providrar som installeras med PowerShell.</span><span class="sxs-lookup"><span data-stu-id="cbf80-131">This parameter is not supported by any providers installed with PowerShell.</span></span>
> <span data-ttu-id="cbf80-132">Om du vill personifiera en annan användare eller öka dina autentiseringsuppgifter när du kör denna cmdlet, använder du [Invoke-Command](../Microsoft.PowerShell.Core/Invoke-Command.md).</span><span class="sxs-lookup"><span data-stu-id="cbf80-132">To impersonate another user, or elevate your credentials when running this cmdlet, use [Invoke-Command](../Microsoft.PowerShell.Core/Invoke-Command.md).</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="cbf80-133">-Undanta</span><span class="sxs-lookup"><span data-stu-id="cbf80-133">-Exclude</span></span>

<span data-ttu-id="cbf80-134">Anger objekt som denna cmdlet utelämnar.</span><span class="sxs-lookup"><span data-stu-id="cbf80-134">Specifies items that this cmdlet omits.</span></span>
<span data-ttu-id="cbf80-135">Värdet för den här parametern kvalificerar parametern **Path** .</span><span class="sxs-lookup"><span data-stu-id="cbf80-135">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="cbf80-136">Ange ett Sök vägs element eller ett mönster, till exempel "\*. txt".</span><span class="sxs-lookup"><span data-stu-id="cbf80-136">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="cbf80-137">Jokertecken är tillåtna.</span><span class="sxs-lookup"><span data-stu-id="cbf80-137">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="cbf80-138">-Filter</span><span class="sxs-lookup"><span data-stu-id="cbf80-138">-Filter</span></span>

<span data-ttu-id="cbf80-139">Anger ett filter i formatet eller språket för providern.</span><span class="sxs-lookup"><span data-stu-id="cbf80-139">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="cbf80-140">Värdet för den här parametern kvalificerar parametern **Path** .</span><span class="sxs-lookup"><span data-stu-id="cbf80-140">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="cbf80-141">Syntaxen för filtret, inklusive användning av jokertecken, är beroende av providern.</span><span class="sxs-lookup"><span data-stu-id="cbf80-141">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="cbf80-142">Filter är mer effektiva än andra parametrar, eftersom providern tillämpar dem när cmdleten hämtar objekten i stället för att ha PowerShell filtrera objekten när de har hämtats.</span><span class="sxs-lookup"><span data-stu-id="cbf80-142">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="cbf80-143">-Force</span><span class="sxs-lookup"><span data-stu-id="cbf80-143">-Force</span></span>

<span data-ttu-id="cbf80-144">Tvingar cmdleten att ta bort en egenskap för ett objekt som annars inte kan kommas åt av användaren.</span><span class="sxs-lookup"><span data-stu-id="cbf80-144">Forces the cmdlet to remove a property of an object that cannot otherwise be accessed by the user.</span></span>
<span data-ttu-id="cbf80-145">Implementeringen varierar från providern till providern.</span><span class="sxs-lookup"><span data-stu-id="cbf80-145">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="cbf80-146">Mer information finns i [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="cbf80-146">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="cbf80-147">-Inkludera</span><span class="sxs-lookup"><span data-stu-id="cbf80-147">-Include</span></span>

<span data-ttu-id="cbf80-148">Anger, som en sträng mat ris, ett objekt eller objekt som denna cmdlet inkluderar i åtgärden.</span><span class="sxs-lookup"><span data-stu-id="cbf80-148">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="cbf80-149">Värdet för den här parametern kvalificerar parametern **Path** .</span><span class="sxs-lookup"><span data-stu-id="cbf80-149">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="cbf80-150">Ange ett Sök vägs element eller ett mönster, till exempel "\*. txt".</span><span class="sxs-lookup"><span data-stu-id="cbf80-150">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="cbf80-151">Jokertecken är tillåtna.</span><span class="sxs-lookup"><span data-stu-id="cbf80-151">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="cbf80-152">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="cbf80-152">-LiteralPath</span></span>

<span data-ttu-id="cbf80-153">Anger sökvägen till egenskapens aktuella plats.</span><span class="sxs-lookup"><span data-stu-id="cbf80-153">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="cbf80-154">Till skillnad från parametern **Path** används värdet för **LiteralPath** exakt som det har angetts.</span><span class="sxs-lookup"><span data-stu-id="cbf80-154">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="cbf80-155">Inga tecken tolkas som jokertecken.</span><span class="sxs-lookup"><span data-stu-id="cbf80-155">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="cbf80-156">Om sökvägen innehåller escape-tecken omger du den med enkla citat tecken.</span><span class="sxs-lookup"><span data-stu-id="cbf80-156">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="cbf80-157">Enkla citat tecken säger att PowerShell inte tolkar några tecken som escape-sekvenser.</span><span class="sxs-lookup"><span data-stu-id="cbf80-157">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="cbf80-158">-Name</span><span class="sxs-lookup"><span data-stu-id="cbf80-158">-Name</span></span>

<span data-ttu-id="cbf80-159">Anger namnen på de egenskaper som ska tas bort.</span><span class="sxs-lookup"><span data-stu-id="cbf80-159">Specifies the names of the properties to remove.</span></span>
<span data-ttu-id="cbf80-160">Jokertecken är tillåtna.</span><span class="sxs-lookup"><span data-stu-id="cbf80-160">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: True
```

### <span data-ttu-id="cbf80-161">-Path</span><span class="sxs-lookup"><span data-stu-id="cbf80-161">-Path</span></span>

<span data-ttu-id="cbf80-162">Anger sökvägen till det objekt vars egenskaper tas bort.</span><span class="sxs-lookup"><span data-stu-id="cbf80-162">Specifies the path of the item whose properties are being removed.</span></span>
<span data-ttu-id="cbf80-163">Jokertecken är tillåtna.</span><span class="sxs-lookup"><span data-stu-id="cbf80-163">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: True
```

### <span data-ttu-id="cbf80-164">– UseTransaction</span><span class="sxs-lookup"><span data-stu-id="cbf80-164">-UseTransaction</span></span>

<span data-ttu-id="cbf80-165">Inkluderar kommandot i den aktiva transaktionen.</span><span class="sxs-lookup"><span data-stu-id="cbf80-165">Includes the command in the active transaction.</span></span>
<span data-ttu-id="cbf80-166">Den här parametern är bara giltig medan en transaktion pågår.</span><span class="sxs-lookup"><span data-stu-id="cbf80-166">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="cbf80-167">Mer information finns i about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="cbf80-167">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="cbf80-168">-Confirm</span><span class="sxs-lookup"><span data-stu-id="cbf80-168">-Confirm</span></span>

<span data-ttu-id="cbf80-169">Uppmanar dig att bekräfta innan du kör cmdleten.</span><span class="sxs-lookup"><span data-stu-id="cbf80-169">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="cbf80-170">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="cbf80-170">-WhatIf</span></span>

<span data-ttu-id="cbf80-171">Visar vad som skulle hända om cmdleten kördes.</span><span class="sxs-lookup"><span data-stu-id="cbf80-171">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="cbf80-172">Cmdleten körs inte.</span><span class="sxs-lookup"><span data-stu-id="cbf80-172">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="cbf80-173">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="cbf80-173">CommonParameters</span></span>

<span data-ttu-id="cbf80-174">Denna cmdlet stöder de gemensamma parametrarna:,,,,,,,, `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` `-PipelineVariable` `-Verbose` `-WarningAction` , och `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="cbf80-174">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="cbf80-175">Mer information finns i [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="cbf80-175">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="cbf80-176">INDATA</span><span class="sxs-lookup"><span data-stu-id="cbf80-176">INPUTS</span></span>

### <span data-ttu-id="cbf80-177">System. String</span><span class="sxs-lookup"><span data-stu-id="cbf80-177">System.String</span></span>

<span data-ttu-id="cbf80-178">Du kan skicka vidare en sträng som innehåller en sökväg, men inte en literal sökväg, till denna cmdlet.</span><span class="sxs-lookup"><span data-stu-id="cbf80-178">You can pipe a string that contains a path, but not a literal path, to this cmdlet.</span></span>

## <span data-ttu-id="cbf80-179">UTDATA</span><span class="sxs-lookup"><span data-stu-id="cbf80-179">OUTPUTS</span></span>

### <span data-ttu-id="cbf80-180">Inget</span><span class="sxs-lookup"><span data-stu-id="cbf80-180">None</span></span>

<span data-ttu-id="cbf80-181">Denna cmdlet returnerar inga utdata.</span><span class="sxs-lookup"><span data-stu-id="cbf80-181">This cmdlet does not return any output.</span></span>

## <span data-ttu-id="cbf80-182">ANTECKNINGAR</span><span class="sxs-lookup"><span data-stu-id="cbf80-182">NOTES</span></span>

<span data-ttu-id="cbf80-183">I PowerShell-registerposten betraktas register värden som egenskaper för en register nyckel eller under nyckel.</span><span class="sxs-lookup"><span data-stu-id="cbf80-183">In the PowerShell Registry provider, registry values are considered to be properties of a registry key or subkey.</span></span> <span data-ttu-id="cbf80-184">Du kan använda **ItemProperty** -cmdletar för att hantera dessa värden.</span><span class="sxs-lookup"><span data-stu-id="cbf80-184">You can use the **ItemProperty** cmdlets to manage these values.</span></span>

<span data-ttu-id="cbf80-185">`Remove-ItemProperty` är utformad för att fungera med data som exponeras av vilken provider som helst.</span><span class="sxs-lookup"><span data-stu-id="cbf80-185">`Remove-ItemProperty` is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="cbf80-186">Om du vill visa en lista över tillgängliga providers i din session skriver du `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="cbf80-186">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="cbf80-187">Mer information finns i about_Providers.</span><span class="sxs-lookup"><span data-stu-id="cbf80-187">For more information, see about_Providers.</span></span>

## <span data-ttu-id="cbf80-188">RELATERADE LÄNKAR</span><span class="sxs-lookup"><span data-stu-id="cbf80-188">RELATED LINKS</span></span>

[<span data-ttu-id="cbf80-189">Hämta objekt</span><span class="sxs-lookup"><span data-stu-id="cbf80-189">Get-Item</span></span>](Get-Item.md)

[<span data-ttu-id="cbf80-190">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-190">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="cbf80-191">Kopiera – ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-191">Copy-ItemProperty</span></span>](Copy-ItemProperty.md)

[<span data-ttu-id="cbf80-192">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-192">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="cbf80-193">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-193">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="cbf80-194">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-194">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="cbf80-195">Ta bort objekt</span><span class="sxs-lookup"><span data-stu-id="cbf80-195">Remove-Item</span></span>](Remove-Item.md)

[<span data-ttu-id="cbf80-196">Byt namn – ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-196">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="cbf80-197">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="cbf80-197">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="cbf80-198">about_Providers</span><span class="sxs-lookup"><span data-stu-id="cbf80-198">about_Providers</span></span>](../Microsoft.PowerShell.Core/About/about_Providers.md)
